sr: retune Raft replay for faster reelection